# radctrl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cfg/: acs-fm-2020.xml  dFFTS.xml  iram-config.xml  iram-dffts-config.xml  iram-test.xml  iram_acs_config.xml  rcts104-sofia4.xml  waspam-kiruna.xml  waspam-mps-config-pure-xffts.xml  waspam3.xml  waspam4.xml  waspam6.xml  waspam7.xml  xffts-v2-500.xml
doc/: CMakeLists.txt
doc/latex/: CMakeLists.txt  radcalc_uguide.tex  references.bib
icons/: CMakeLists.txt
inc/: CMakeLists.txt
inc/gui/: CMakeLists.txt
inc/gui/imgui/: CMakeLists.txt
inc/gui/implot/: CMakeLists.txt
python/: CMakeLists.txt
python/backend/: FW.py  XFW.py  dFW.py  pc104.py  rcts104.py  swicts.py
python/chopper/: CMakeLists.txt  chopper.py  tony_chopper.py  tony_chopper_new.py
python/frontend/: dbr.py
python/housekeeping/: Agilent.py  sensors.py
python/wobbler/: CMakeLists.txt  IRAM.py  WVR.py  kiruna-wobbler.py
src/: .gitignore  CMakeLists.txt  antenna.cpp  antenna.h  asio_interface.cpp  asio_interface.h  atm.cpp  atm.h  atmpath.cpp  atmpath.h  backend.cpp  backend.h  background.cpp  background.h  chopper.cpp  chopper.h  chopper_cli.cpp  cli_parsing.cpp  cli_parsing.h  cli_runtime.cpp  cli_runtime.h  complex.h  constants.h  derivatives.h  dummy_gui.cpp  enums.h  file.cpp  file.h  forward.cpp  forward.h  frontend.cpp  frontend.h  frontend_cli.cpp  genautoarts.cpp  geom.cpp  geom.h  grids.h  gui.h  gui_help.cpp  gui_macros.h  (+75 more)
src/Agilent/: agilent34970A.c  sensor.c  sensor.h
src/arts/: CMakeLists.txt  arts_agenda.cpp  arts_agenda.h  arts_atmosphere.cpp  arts_atmosphere.h  arts_continua.cpp  arts_continua.h  arts_surface.cpp  arts_surface.h  autoarts.h  genautoarts.cpp  interface.cpp  interface.h  waspam_water_simulations.cpp  waspam_water_simulations.h
src/backend/: CMakeLists.txt  backend_affts.cpp  backend_affts.h  backend_dffts.cpp  backend_dffts.h  backend_pc104.cpp  backend_pc104.h  backend_rcts104.cpp  backend_rcts104.h  backend_swicts.cpp  backend_swicts.h  backend_xffts.cpp  backend_xffts.h
src/chopper/: CMakeLists.txt  chopper_cfg.h  chopper_orig.cpp  chopper_orig.h  chopper_tony_orig.cpp  chopper_tony_orig.h
src/frontend/: CMakeLists.txt  frontend_cfg.h  frontend_dbr.cpp  frontend_dbr.h  frontend_waspam.cpp  frontend_waspam.h
src/housekeeping/: CMakeLists.txt  housekeeping_agilent.cpp  housekeeping_agilent.h  housekeeping_pysensors.cpp  housekeeping_pysensors.h
src/plot/: CMakeLists.txt  plot.cpp  plot.h
src/wobbler/: CMakeLists.txt  wobbler_iram_orig.cpp  wobbler_iram_orig.h  wobbler_waspam_orig.cpp  wobbler_waspam_orig.h
